# llm-assignment

./: .pre-commit-config.yaml  Makefile  README.md  poetry.toml  pyproject.toml
.github/workflows/: ci.yaml
data/ocr_dataset_labels/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  30.json  31.json  32.json  33.json  34.json
llm-assignment/: main.py  utils.py
