[tool.poetry]
name = "llm-assignment"
version = "0.1.0"
description = ""
authors = ["Ivado Labs"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.4.0"
pytest = "^7.4.2"
coverage = "^7.3.2"
openai = "^1.6.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
